# altium-tools

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ALTIUM_FILE_FORMAT.md  ARCHITECTURE.md  PROJECT_ANALYSIS_AND_ROADMAP.md  RULE_GENERATOR_PLAN.md
src/altiumtools/: __init__.py  cli.py
src/altiumtools/checks/: README.md  __init__.py  builtin.py
src/altiumtools/core/: README.md  __init__.py  model.py  parse.py
src/altiumtools/rules/: README.md  __init__.py  emit.py  fields.py  model.py  parse.py
src/altiumtools/rules/manufacturers/: README.md  __init__.py  advancedpcb.py  aisler.py  eurocircuits.py  jlcpcb.py  oshpark.py  pcbway.py  seeed.py
tests/: _olewriter.py  test_checks.py  test_parse.py  test_rules_cli.py  test_rules_fidelity.py  test_rules_manufacturers.py
